added link of css and js file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Smoothie Order Form</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>Order Smoothie</h1>
@@ -75,8 +75,8 @@
         <button type="submit">Submit Order</button>
       </form>
 
-      
 
-      <script src=""></script>
+
+      <script src="./js/scricpt.js"></script>
 </body>
 </html>
