order placed html

--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
         <button type="submit">Submit Order</button>
       </form>
 
+      <div id="orderConfirmation" class="hidden">
+        <h2>Order Placed Successfully!</h2>
+        <p><strong>Name:</strong> <span id="orderName"></span></p>
+        <p><strong>Address:</strong> <span id="orderAddress"></span></p>
+        <p><strong>Phone:</strong> <span id="orderPhone"></span></p>
+        <p><strong>Smoothie Size:</strong> <span id="orderSize"></span></p>
+        <p><strong>Fruits:</strong> <span id="orderFruits"></span></p>
+        <p><strong>Toppings:</strong> <span id="orderToppings"></span></p>
+        <p><strong>Number of Sugars:</strong> <span id="orderSugars"></span></p>
+        <p><strong>Number of Glasses:</strong> <span id="orderGlasses"></span></p>
+        <p><strong>Total Price:</strong> $<span id="orderPrice"></span></p>
+        <button id="newOrderButton">Place Another Order</button>
+      </div>
 
 
       <script src="./js/scricpt.js"></script>
